Reformatted code and added meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="https://s3.amazonaws.com/secretsaucefiles/photos/images/000/176/617/large/IMG-20170825-WA0039.jpg?1503675549" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Recipe AI</title>
 		%sveltekit.head%
+		<meta property="og:title" content="Revolutionize Your Cooking">
+		<meta property="og:site_name" content="Recipe AI">
+		<meta property="og:url" content="https://recipeai.vercel.app/">
+		<meta property="og:description" content="With Recipe AI, you can easily create a customized recipe that fits your specific ingredients, desired level of complexity, and time constraints. Simply enter your desired parameters and let the powerful OpenAI Davinci model do the rest, generating an easy-to-follow recipe that meets your exact needs. Whether you're a beginner cook or an experienced chef, Recipe AI has got you covered!">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="https://s3.amazonaws.com/secretsaucefiles/photos/images/000/176/617/large/IMG-20170825-WA0039.jpg?1503675549">
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Recipe AI" />
+		<meta name="twitter:description" content="With Recipe AI, you can easily create a customized recipe that fits your specific ingredients, desired level of complexity, and time constraints. Simply enter your desired parameters and let the powerful OpenAI Davinci model do the rest, generating an easy-to-follow recipe that meets your exact needs. Whether you're a beginner cook or an experienced chef, Recipe AI has got you covered!" />
+		<meta name="twitter:image" content="https://s3.amazonaws.com/secretsaucefiles/photos/images/000/176/617/large/IMG-20170825-WA0039.jpg?1503675549" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
